--- a/kaggle_cat.ipynb
+++ b/kaggle_cat.ipynb
@@ -163,6 +163,396 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-22T20:30:32.845771Z",
+     "start_time": "2020-03-22T20:30:32.735585Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.drop(\"id\",axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-22T20:30:38.606176Z",
+     "start_time": "2020-03-22T20:30:38.337641Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bin_0</th>\n",
+       "      <th>bin_1</th>\n",
+       "      <th>bin_2</th>\n",
+       "      <th>bin_3</th>\n",
+       "      <th>bin_4</th>\n",
+       "      <th>nom_0</th>\n",
+       "      <th>nom_1</th>\n",
+       "      <th>nom_2</th>\n",
+       "      <th>nom_3</th>\n",
+       "      <th>nom_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>nom_9</th>\n",
+       "      <th>ord_0</th>\n",
+       "      <th>ord_1</th>\n",
+       "      <th>ord_2</th>\n",
+       "      <th>ord_3</th>\n",
+       "      <th>ord_4</th>\n",
+       "      <th>ord_5</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Trapezoid</td>\n",
+       "      <td>Hamster</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Bassoon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>02e7c8990</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Contributor</td>\n",
+       "      <td>Hot</td>\n",
+       "      <td>c</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pw</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Star</td>\n",
+       "      <td>Axolotl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Theremin</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f37df64af</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Grandmaster</td>\n",
+       "      <td>Warm</td>\n",
+       "      <td>e</td>\n",
+       "      <td>X</td>\n",
+       "      <td>pE</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hamster</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Bassoon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Freezing</td>\n",
+       "      <td>n</td>\n",
+       "      <td>P</td>\n",
+       "      <td>eN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Hamster</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Theremin</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f9d456e57</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Novice</td>\n",
+       "      <td>Lava Hot</td>\n",
+       "      <td>a</td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Triangle</td>\n",
+       "      <td>Hamster</td>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>c5361037c</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Grandmaster</td>\n",
+       "      <td>Cold</td>\n",
+       "      <td>h</td>\n",
+       "      <td>C</td>\n",
+       "      <td>OZ</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599995</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Polygon</td>\n",
+       "      <td>Axolotl</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Theremin</td>\n",
+       "      <td>...</td>\n",
+       "      <td>015c63324</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Novice</td>\n",
+       "      <td>Freezing</td>\n",
+       "      <td>a</td>\n",
+       "      <td>R</td>\n",
+       "      <td>GZ</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599996</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>Polygon</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>Oboe</td>\n",
+       "      <td>...</td>\n",
+       "      <td>a02ae6a63</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Novice</td>\n",
+       "      <td>Boiling Hot</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>sf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599997</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Axolotl</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Theremin</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40f9610c1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Contributor</td>\n",
+       "      <td>Freezing</td>\n",
+       "      <td>n</td>\n",
+       "      <td>H</td>\n",
+       "      <td>MV</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599998</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Polygon</td>\n",
+       "      <td>Axolotl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Piano</td>\n",
+       "      <td>...</td>\n",
+       "      <td>c1a8374a0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>Warm</td>\n",
+       "      <td>m</td>\n",
+       "      <td>X</td>\n",
+       "      <td>Ey</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599999</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>Triangle</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Theremin</td>\n",
+       "      <td>...</td>\n",
+       "      <td>e2aea7784</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Contributor</td>\n",
+       "      <td>Boiling Hot</td>\n",
+       "      <td>b</td>\n",
+       "      <td>O</td>\n",
+       "      <td>uI</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600000 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        bin_0  bin_1  bin_2 bin_3 bin_4 nom_0      nom_1    nom_2       nom_3  \\\n",
+       "0         0.0    0.0    0.0     F     N   Red  Trapezoid  Hamster      Russia   \n",
+       "1         1.0    1.0    0.0     F     Y   Red       Star  Axolotl         NaN   \n",
+       "2         0.0    1.0    0.0     F     N   Red        NaN  Hamster      Canada   \n",
+       "3         NaN    0.0    0.0     F     N   Red     Circle  Hamster     Finland   \n",
+       "4         0.0    NaN    0.0     T     N   Red   Triangle  Hamster  Costa Rica   \n",
+       "...       ...    ...    ...   ...   ...   ...        ...      ...         ...   \n",
+       "599995    0.0    1.0    0.0     T     N   Red    Polygon  Axolotl       India   \n",
+       "599996    1.0    0.0    0.0     T     Y  Blue    Polygon      Dog  Costa Rica   \n",
+       "599997    0.0    0.0    0.0     F     Y   Red     Circle  Axolotl      Russia   \n",
+       "599998    1.0    1.0    0.0     F     Y   NaN    Polygon  Axolotl         NaN   \n",
+       "599999    0.0    0.0    0.0     T     N  Blue   Triangle      Dog      Russia   \n",
+       "\n",
+       "           nom_4  ...      nom_9 ord_0        ord_1        ord_2 ord_3  ord_4  \\\n",
+       "0        Bassoon  ...  02e7c8990   3.0  Contributor          Hot     c      U   \n",
+       "1       Theremin  ...  f37df64af   3.0  Grandmaster         Warm     e      X   \n",
+       "2        Bassoon  ...        NaN   3.0          NaN     Freezing     n      P   \n",
+       "3       Theremin  ...  f9d456e57   1.0       Novice     Lava Hot     a      C   \n",
+       "4            NaN  ...  c5361037c   3.0  Grandmaster         Cold     h      C   \n",
+       "...          ...  ...        ...   ...          ...          ...   ...    ...   \n",
+       "599995  Theremin  ...  015c63324   3.0       Novice     Freezing     a      R   \n",
+       "599996      Oboe  ...  a02ae6a63   2.0       Novice  Boiling Hot     n      N   \n",
+       "599997  Theremin  ...  40f9610c1   2.0  Contributor     Freezing     n      H   \n",
+       "599998     Piano  ...  c1a8374a0   1.0       Master         Warm     m      X   \n",
+       "599999  Theremin  ...  e2aea7784   1.0  Contributor  Boiling Hot     b      O   \n",
+       "\n",
+       "       ord_5  day month target  \n",
+       "0         Pw  6.0   3.0      0  \n",
+       "1         pE  7.0   7.0      0  \n",
+       "2         eN  5.0   9.0      0  \n",
+       "3        NaN  3.0   3.0      0  \n",
+       "4         OZ  5.0  12.0      0  \n",
+       "...      ...  ...   ...    ...  \n",
+       "599995    GZ  5.0   NaN      0  \n",
+       "599996    sf  NaN   3.0      0  \n",
+       "599997    MV  7.0   5.0      0  \n",
+       "599998    Ey  1.0   5.0      0  \n",
+       "599999    uI  5.0   8.0      0  \n",
+       "\n",
+       "[600000 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
